[package]
name = "chord"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.4", features = ["full"]}
anyhow = "1.0.34"
log = "0.4.11"
sha2 = "0.9.2"
serde = "1.0.118"
tokio-util = {version="0.5.1",features=["codec"]}
bincode = "1.3.1"
serde_derive = "1.0.118"
rand = "0.7.3"
