[package]
name = "chord_test"
version = "0.1.0"
authors = ["delskayn <mees.delzenne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
chord = {path = "../chord"}
serde = "1.0.118"
serde_derive = "1.0.118"
tokio = {version = "0.3.4", features = ["full"]}
log = "0.4.11"
humantime = "2.0.1"
structopt = "0.3.20"
anyhow = "1.0.34"
serde_json = "1.0.60"
duct = "0.13.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
